--- a/wsc/TOC/index.html
+++ b/wsc/TOC/index.html
@@ -21,7 +21,7 @@
 <meta name="twitter:card" content="summary_large_image">	
 <style>
  body {
-  background: #fff0fc;
+  background: #f0ffff;
   color: black;
   font-family: Futura,Trebuchet MS,sans-serif,Arial;
  }
