--- a/wsc/TOC/index.html
+++ b/wsc/TOC/index.html
@@ -128,7 +128,7 @@ div.desc {
 <div class="clearfix"></div>
 	<img src="img/mascot.png" style="width:48px; margin-top:10px;" class="center">
 	<p style="border-top: 1px solid #9c46ff"> </p>
-<div style="text-align:center; line-height:0">
+<div class="center" style="text-align:center;">
 	<h3>Source: Manga Magazines Group</h3> 
 
 </div>	
