--- a/wsc/TOC/index.html
+++ b/wsc/TOC/index.html
@@ -121,7 +121,7 @@ div.desc {
   <div class="gallery">
     <a href="19_28/">
       <img src="19_28/img/img_wc.jpg" alt="" width="600" height="400">
-	    <div class="desc"><h2>Weekly Shonen Sunday #28 2019</h2></div></a>
+	    <div class="desc"><h2>Weekly Shonen Champion #28 2019</h2></div></a>
   </div>
 </div>
 
