--- a/TOC/19_29/esp.html
+++ b/TOC/19_29/esp.html
@@ -36,241 +36,27 @@
 
 	<div class="contents">
 		
-		<!-- Demon Slayer: Kimetsu no Yaiba -->
-		<div class="comment_area">
-			<h2><a href="https://mangaplus.shueisha.co.jp/#/titles/100009">Demon Slayer: Kimetsu no Yaiba <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
-			<div class="detail_area">
-				<div class="l_side"><img src="img/img_gotouge.png" alt=""></div>
-				<div class="r_side">
-					<p class="author">Koyoharu Gotouge</p>
-					If you sneeze and hiccup at the same time, it's something. It's really something...
-				</div>
-			</div>
-		</div>
-		
-		<!-- Samurai 8: The Tale of Hachimaru -->
-		<div class="comment_area">
-			<h2><a href="https://mangaplus.shueisha.co.jp/#/titles/100059">Samurai 8: The Tale of Hachimaru <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
-			<div class="detail_area">
-				<div class="l_side"><img src="img/img_kishimoto.png" alt=""></div>
-				<div class="r_side">
-					<p class="author">Masashi Kishimoto</p>
-					A new Kabuki play of Naruto will be performed at Minamiza in Kyoto. Please check it out!
-				</div>
-			</div>
-		</div>
-		
-		<!-- Chainsaw Man -->
-		<div class="comment_area">
-			<h2><a href="https://mangaplus.shueisha.co.jp/#/titles/100037">Chainsaw Man <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
-			<div class="detail_area">
-				<div class="l_side"><img src="img/img_fujimoto.png" alt=""></div>
-				<div class="r_side">
-					<p class="author">Tatsuki Fujimoto</p>
-					Watermelons are getting cheaper and cheaper as we get into summer. Yes!
-				</div>
-			</div>
-		</div>
-		
-		<!-- ACT-AGE -->
-		<div class="comment_area">
-			<h2><a href="https://mangaplus.shueisha.co.jp/#/titles/100036">ACT-AGE <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
-			<div class="detail_area">
-				<div class="l_side"><img src="img/img_usazaki.png" alt=""></div>
-				<div class="r_side">
-					<p class="author">Shiro Usazaki</p>
-					No matter when I leave the house, I always struggle with what to wear, temperature wise. I don't understand the seasons.
-				</div>
-			</div>
-		</div>
-		
-		<!-- Black Clover -->
-		<div class="comment_area">
-			<h2><a href="https://mangaplus.shueisha.co.jp/#/titles/100003">Black Clover <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
-			<div class="detail_area">
-				<div class="l_side"><img src="img/img_tabata.png" alt=""></div>
-				<div class="r_side">
-					<p class="author">Y&umacr;ki Tabata</p>
-					Congratulations to Food Wars! for an amazing run! You're a rival I was always chasing. I'll be awaiting your return!
-				</div>
-			</div>
-		</div>
-		
-		<!-- The Promised Neverland -->
-		<div class="comment_area">
-			<h2><a href="https://mangaplus.shueisha.co.jp/#/titles/100026">The Promised Neverland <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
-			<div class="detail_area">
-				<div class="l_side"><img src="img/img_shirai.png" alt=""></div>
-				<div class="r_side">
-					<p class="author">Kaiu Shirai</p>
-					There are so many dishes and characters that I loved. Congratulations to the three creators on six and a half years of amazing manga!
-				</div>
-			</div>
-		</div>
-		
-		<!-- Tokyo Shinobi Squad -->
-		<div class="comment_area">
-			<h2><a href="https://mangaplus.shueisha.co.jp/#/titles/100062">Tokyo Shinobi Squad <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
-			<div class="detail_area">
-				<div class="l_side"><img src="img/img_matsuura.png" alt=""></div>
-				<div class="r_side">
-					<p class="author">Kento Matsuura</p>
-					So many awesome-looking anime movies coming out this summer! My ability to schedule things is being tested...
-				</div>
-			</div>
-		</div>
-		
-		<!-- Haikyu!! -->
-		<div class="comment_area">
-			<h2><a href="https://mangaplus.shueisha.co.jp/#/titles/100014">Haikyu!! <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
-			<div class="detail_area">
-				<div class="l_side"><img src="img/img_furudate.png" alt=""></div>
-				<div class="r_side">
-					<p class="author">Haruichi Furudate</p>
-					Ahh... Food Wars! finally concluded. Congratulations! Let's go drinking again, Tsukuda Sensei!
-				</div>
-			</div>
-		</div>
-		
-		<!-- Jujutsu Kaisen -->
-		<div class="comment_area">
-			<h2><a href="https://mangaplus.shueisha.co.jp/#/titles/100034">Jujutsu Kaisen <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
-			<div class="detail_area">
-				<div class="l_side"><img src="img/img_akutami.png" alt=""></div>
-				<div class="r_side">
-					<p class="author">Gege Akutami</p>
-					Last week I drew some of Eso's shoulder that had already been blown off... Don't worry about it!
-				</div>
-			</div>
-		</div>
-		
-		<!-- Double Taisei -->
-		<div class="comment_area">
-			<h2><a href="https://mangaplus.shueisha.co.jp/#/titles/100060">Double Taisei <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
-			<div class="detail_area">
-				<div class="l_side"><img src="img/img_fukuda.png" alt=""></div>
-				<div class="r_side">
-					<p class="author">Kentaro Fukuda</p>
-					Atsuhiko Nakata's YouTube University is entertaining. Actually, it's amazing! Acchan is so cool!
-				</div>
-			</div>
-		</div>
-		
-		<!-- My Hero Academia -->
-		<div class="comment_area">
-			<h2><a href="https://mangaplus.shueisha.co.jp/#/titles/100017">My Hero Academia <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
-			<div class="detail_area">
-				<div class="l_side"><img src="img/img_horikoshi.png" alt=""></div>
-				<div class="r_side">
-					<p class="author">Kohei Horikoshi</p>
-					Tsukuda-san, Saeki Sensei, congratulations! It's gonna be sad without you. I'm looking forward to the final chapter!
-				</div>
-			</div>
-		</div>
-		
-		<!-- Food Wars!: Shokugeki no Soma -->
-		<div class="comment_area">
-			<h2><a href="https://mangaplus.shueisha.co.jp/#/titles/100013">Food Wars!: Shokugeki no Soma <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
-			<div class="detail_area">
-				<div class="l_side"><img src="img/img_tsukuda.png" alt=""></div>
-				<div class="r_side">
-					<p class="author">Yuto Tsukuda</p>
-					I was so happy to be able to walk with Soma and everyone for 315 chapters. Thank you to all who supported us!
-				</div>
-			</div>
-			<div class="detail_area">
-				<div class="l_side"><img src="img/img_saeki.png" alt=""></div>
-				<div class="r_side">
-					<p class="author">Shun Saeki</p>
-					Thank you for a fourth season of the anime! And join us in GIGA if you can!
-				</div>
-			</div>
-		</div>
-		
-		<!-- Dr. STONE -->
-		<div class="comment_area">
-			<h2><a href="https://mangaplus.shueisha.co.jp/#/titles/100010">Dr. STONE <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
-			<div class="detail_area">
-				<div class="l_side"><img src="img/img_inagaki.png" alt=""></div>
-				<div class="r_side">
-					<p class="author">Riichiro Inagaki</p>
-					I actually made the thing that shows up in the story in my kitchen. It was smelly and gross!
-				</div>
-			</div>
-		</div>
-		
-		<!-- Beast Children -->
-		<div class="comment_area">
-			<h2><a href="https://mangaplus.shueisha.co.jp/#/titles/100061">Beast Children <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
-			<div class="detail_area">
-				<div class="l_side"><img src="img/img_terasaka.png" alt=""></div>
-				<div class="r_side">
-					<p class="author">Kento Terasaka</p>
-					I really enjoy a radio show called Washizaki Takeshi's Yorunight x Yorunight. I always draw manga while listening to it.
-				</div>
-			</div>
-		</div>
-		
-		<!-- We Never Learn -->
-		<div class="comment_area">
-			<h2><a href="https://mangaplus.shueisha.co.jp/#/titles/100035">We Never Learn <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
-			<div class="detail_area">
-				<div class="l_side"><img src="img/img_tsutsui.png" alt=""></div>
-				<div class="r_side">
-					<p class="author">Taishi Tsutsui</p>
-					Saeki Sensei, Tsukuda Sensei, congratulations for real! Let's get a meal together again!
-				</div>
-			</div>
-		</div>
-		
-		<!-- Hinomaru Sumo -->
-		<div class="comment_area">
-			<h2><a href="https://mangaplus.shueisha.co.jp/#/titles/100031">Hinomaru Sumo <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
-			<div class="detail_area">
-				<div class="l_side"><img src="img/img_kawada.png" alt=""></div>
-				<div class="r_side">
-					<p class="author">Kawada</p>
-					I recently started following pro wrestling again and the Best of the Super Juniors tournament was amazing!
-				</div>
-			</div>
-		</div>
-		
-		<!-- Yuragi sou -->
-		<div class="comment_area">
-			<h2><a href="">Yuragi-sou no Yuuna-san <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
-			<div class="detail_area">
-				<div class="l_side"><img src="img/img_miura.png" alt=""></div>
-				<div class="r_side">
-					<p class="author">Tadahiro Miura</p>
-					Mr. Tsukuda, Mr. Saeki, it was a very long serialization that inspired me to strengthen my work. Thank you so much.
-				</div>
-			</div>
-		</div>
-		
-		<!-- The Last Saiyuki -->
-		<div class="comment_area">
-			<h2><a href="https://mangaplus.shueisha.co.jp/#/titles/100054">The Last Saiyuki <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
-			<div class="detail_area">
-				<div class="l_side"><img src="img/img_nonoue.png" alt=""></div>
-				<div class="r_side">
-					<p class="author">Daijiro Nonoue</p>
-					They came out with figures for the bugs from the 16th century medical text Harikikigaki. I want the Yo no Kameshaku one!
-				</div>
-			</div>
-		</div>
-		
-		<!-- Yui Kamio Lets Loose -->
-		<div class="comment_area">
-			<h2><a href="https://mangaplus.shueisha.co.jp/#/titles/100055">Yui Kamio Lets Loose <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
-			<div class="detail_area">
-				<div class="l_side"><img src="img/img_shiibashi.png" alt=""></div>
-				<div class="r_side">
-					<p class="author">Hiroshi Shiibashi</p>
-					When I'm struggling, I often read the Yudetamago autobiography Namatamago to motivate myself. Congratulations on 40 years!
-				</div>
-			</div>
-		</div>
-		
+		<!-- Demon Slayer: Kimetsu no Yaiba--><div class="comment_area"><h2><a href="#">Demon Slayer: Kimetsu no Yaiba<span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2><div class="detail_area"><div class="l_side"><img src="img/img_gotouge.jpg" alt=""></div><div class="r_side"><p class="author">Koyoharu Gotouge</p>Cuando estornudas y tienes hipo a la vez es increíble. Realmente increíble...</div></div></div>
+<!-- Samurai 8: The Tale of Hachimaru--><div class="comment_area"><h2><a href="#">Samurai 8: The Tale of Hachimaru<span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2><div class="detail_area"><div class="l_side"><img src="img/img_kishimoto.jpg" alt=""></div><div class="r_side"><p class="author">Masashi Kishimoto</p>Una nueva obra Kabuki de Naruto será interpretada en Minamiza en Kyoto. Por favor echadle un vistazo!</div></div></div>
+<!-- Chainsaw Man--><div class="comment_area"><h2><a href="#">Chainsaw Man<span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2><div class="detail_area"><div class="l_side"><img src="img/img_fujimoto.jpg" alt=""></div><div class="r_side"><p class="author">Tatsuki Fujimoto</p>Las sandías son cada vez más baratas conforme se acerca el verano. Bien!</div></div></div>
+<!-- ACT-AGE--><div class="comment_area"><h2><a href="#">ACT-AGE<span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2><div class="detail_area"><div class="l_side"><img src="img/img_usazaki.jpg" alt=""></div><div class="r_side"><p class="author">Shiro Usazaki</p>Sin importar cuando salga de casa, siempre lo paso mal eligiendo que vestir según la temperatura. No entiendo las estaciones.</div></div></div>
+<!-- Black Clover--><div class="comment_area"><h2><a href="#">Black Clover<span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2><div class="detail_area"><div class="l_side"><img src="img/img_tabata.jpg" alt=""></div><div class="r_side"><p class="author">Y&umacr;ki Tabata</p>Enhorabuena a Shokugeki no Sōma por este gran recorrido!  Era un rival al que estaba siempre persiguiendo. Estaré aguardando su regreso!</div></div></div>
+<!-- The Promised Neverland--><div class="comment_area"><h2><a href="#">The Promised Neverland<span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2><div class="detail_area"><div class="l_side"><img src="img/img_shirai.jpg" alt=""></div><div class="r_side"><p class="author">Kaiu Shirai</p>Hay un montón de platos y personajes que me encantan. Enhorabuena a los tres creadores por los seis años y medio de este genial manga!</div></div></div>
+<!-- Tokyo Shinobi Squad--><div class="comment_area"><h2><a href="#">Tokyo Shinobi Squad<span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2><div class="detail_area"><div class="l_side"><img src="img/img_matsuura.jpg" alt=""></div><div class="r_side"><p class="author">Kento Matsuura</p>Muchas películas anime se estrenan este verano! Pondré a prueba mi habilidad de planificación.</div></div></div>
+<!-- Haikyu!!--><div class="comment_area"><h2><a href="#">Haikyu!!<span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2><div class="detail_area"><div class="l_side"><img src="img/img_furudate.jpg" alt=""></div><div class="r_side"><p class="author">Haruichi Furudate</p>Ahh... Shokugeki no Sōma finalmente ha acabado. Enhorabuena! Vayamos a beber más veces, Tsukuda Sensei!</div></div></div>
+<!-- Jujutsu Kaisen--><div class="comment_area"><h2><a href="#">Jujutsu Kaisen<span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2><div class="detail_area"><div class="l_side"><img src="img/img_akutami.jpg" alt=""></div><div class="r_side"><p class="author">Gege Akutami</p>La semana pasada dibuje parte del hombro de Eso que ya había sido destrozado... No pasa nada!</div></div></div>
+<!-- Double Taisei--><div class="comment_area"><h2><a href="#">Double Taisei<span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2><div class="detail_area"><div class="l_side"><img src="img/img_fukuda.jpg" alt=""></div><div class="r_side"><p class="author">Kentaro Fukuda</p>YouTube University de Atsuhiko Nakata es entretenido, de hecho es genial! Acchan es muy guay!</div></div></div>
+<!-- My Hero Academia--><div class="comment_area"><h2><a href="#">My Hero Academia<span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2><div class="detail_area"><div class="l_side"><img src="img/img_horikoshi.jpg" alt=""></div><div class="r_side"><p class="author">Kohei Horikoshi</p>Tsukuda-san, Saeki Sensei, enhorabuena! Vamos a estar tristes sin vosotros. Tengo ganas de ver el capítulo final!</div></div></div>
+<!-- Food Wars!: Shokugeki no Soma--><div class="comment_area"><h2><a href="#">Food Wars!: Shokugeki no Soma<span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2><div class="detail_area"><div class="l_side"><img src="img/img_tsukuda.jpg" alt=""></div><div class="r_side"><p class="author">Yuto Tsukuda</p>Soy tan feliz de haber podido caminar junto a Soma y a todos durante 315 capítulos. Gracias a todos los que nos han apoyado!</div></div></div>
+<!-- eh--><div class="comment_area"><h2><a href="#">eh<span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2><div class="detail_area"><div class="l_side"><img src="img/img_saeki.jpg" alt=""></div><div class="r_side"><p class="author">Shun Saeki</p>Gracias por la cuarta temporada del anime! Y únete a nosotros en Jump GIGA!</div></div></div>
+<!-- Dr. STONE--><div class="comment_area"><h2><a href="#">Dr. STONE<span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2><div class="detail_area"><div class="l_side"><img src="img/img_inagaki.jpg" alt=""></div><div class="r_side"><p class="author">Riichiro Inagaki</p>Hice esa cosa que se ve en el capítulo en mi cocina. Era maloliente y asquerosa!</div></div></div>
+<!-- Beast Children--><div class="comment_area"><h2><a href="#">Beast Children<span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2><div class="detail_area"><div class="l_side"><img src="img/img_terasaka.jpg" alt=""></div><div class="r_side"><p class="author">Kento Terasaka</p>Últimamente lo paso bien escuchando un programa de radio llamado Yorunight x Yorunight de Washizaki Takeshi. Siempre lo escucho mientras dibujo manga.</div></div></div>
+<!-- We Never Learn--><div class="comment_area"><h2><a href="#">We Never Learn<span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2><div class="detail_area"><div class="l_side"><img src="img/img_tsutsui.jpg" alt=""></div><div class="r_side"><p class="author">Taishi Tsutsui</p>Saeki sensei, Tsukuda Sensei, enhorabuena! Vayamos a comer juntos de nuevo!</div></div></div>
+<!-- Hinomaru Sumo--><div class="comment_area"><h2><a href="#">Hinomaru Sumo<span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2><div class="detail_area"><div class="l_side"><img src="img/img_kawada.jpg" alt=""></div><div class="r_side"><p class="author">Kawada</p>Hace poco volví a ver lucha libre profesional y el torneo de los Mejores Super Juniors fue genial!</div></div></div>
+<!-- Yuragi-sou no Yuuna-san--><div class="comment_area"><h2><a href="#">Yuragi-sou no Yuuna-san<span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2><div class="detail_area"><div class="l_side"><img src="img/img_miura.jpg" alt=""></div><div class="r_side"><p class="author">Tadahiro Miura</p>Señor Tsukuda, señor Saeki, ha sido una serialización muy larga que me inspiró a reforzar mi trabajo. Muchas gracias.</div></div></div>
+<!-- The Last Saiyuki--><div class="comment_area"><h2><a href="#">The Last Saiyuki<span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2><div class="detail_area"><div class="l_side"><img src="img/img_nonoue.jpg" alt=""></div><div class="r_side"><p class="author">Daijiro Nonoue</p>Salieron las figuras de los bichos del texto sobre medicina del siglo 16 Harikikigaki. Quiero la de Yo no Kameshaku!</div></div></div>
+<!-- Yui Kamio Lets Loose--><div class="comment_area"><h2><a href="#">Yui Kamio Lets Loose<span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2><div class="detail_area"><div class="l_side"><img src="img/img_shiibashi.jpg" alt=""></div><div class="r_side"><p class="author">Hiroshi Shiibashi</p>Cuando me bloqueo, normalmente leo la autobiografía de Yudetamago para conseguir motivación. Enhorabuena por los 40 años!</div></div></div>
+
 	</div><!-- end .contents -->
 	<div id="footer">
 		<div class="cooyactxt">&copy; SHUEISHA Inc. All rights reserved.</div>
