--- a/TOC/19_29/esp.html
+++ b/TOC/19_29/esp.html
@@ -29,8 +29,8 @@
 <body>
 <div id="container">
 	<div class="header">
-		<h1><img src="img/top.jpg" alt=""></h1>
-		<div class="txt_read"><span>This week's weekly ShonenJump posting order &amp; comments from the author.</span></div>
+		<h1><img src="img/top_esp.jpg" alt=""></h1>
+		<div class="txt_read"><span>Los puestos y comentarios del autor de la Weekly Shonen Jump de esta semana.</span></div>
 		<div class="img_wj"><img src="img/img_wj.jpg" alt=""></div>
 	</div><!-- end .header -->
 
