--- a/TOC/19_29/esp.html
+++ b/TOC/19_29/esp.html
@@ -14,13 +14,13 @@
    type="image/x-icon"
         href="https://manganimy.github.io/TOC/img/fav.ico">
 <meta charset="UTF-8">
-<title>Table of contents</title>
+<title>Puestos y comentarios del autor</title>
 <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
 <meta property="og:title" content="Weekly Shonen Jump #29 2019">	
-<meta property="og:description" content="Table of contents &amp; Author Comments">
+<meta property="og:description" content="Puestos y comentarios del autor">
 <meta name="Keywords" content="Table of contents">
-<meta property="og:image" content="https://manganimy.github.io/TOC/19_29/img/top.jpg">
-<meta property="og:url" content="https://manganimy.github.io/TOC/19_29">
+<meta property="og:image" content="https://manganimy.github.io/TOC/19_29/img/top_esp.jpg">
+<meta property="og:url" content="https://manganimy.github.io/TOC/19_29/esp.html">
 <meta name="twitter:card" content="summary_large_image">
 <link rel="stylesheet" href="css/reset.css">
 <link rel="stylesheet" href="css/style.css">
@@ -35,8 +35,8 @@
 	</div><!-- end .header -->
 
 	<div class="contents">
-<!-- Demon Slayer: Kimetsu no Yaiba--><div class="comment_area"><h2><a href="#">Demon Slayer: Kimetsu no Yaiba<span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2><div class="detail_area"><div class="l_side"><img src="img/img_gotouge.png" alt=""></div><div class="r_side"><p class="author">Koyoharu Gotouge</p>Cuando estornudas y tienes hipo a la vez es increíble. Realmente increíble...</div></div></div>
-<!-- Samurai 8: The Tale of Hachimaru--><div class="comment_area"><h2><a href="#">Samurai 8: The Tale of Hachimaru<span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2><div class="detail_area"><div class="l_side"><img src="img/img_kishimoto.png" alt=""></div><div class="r_side"><p class="author">Masashi Kishimoto</p>Una nueva obra Kabuki de Naruto será interpretada en Minamiza en Kyoto. Por favor echadle un vistazo!</div></div></div>
+<!-- Demon Slayer: Kimetsu no Yaiba--><div class="comment_area"><h2><a href="#">Guardianes de la noche<span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2><div class="detail_area"><div class="l_side"><img src="img/img_gotouge.png" alt=""></div><div class="r_side"><p class="author">Koyoharu Gotouge</p>Cuando estornudas y tienes hipo a la vez es increíble. Realmente increíble...</div></div></div>
+<!-- Samurai 8: The Tale of Hachimaru--><div class="comment_area"><h2><a href="#">Samurai8 - La leyenda de Hachimaru<span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2><div class="detail_area"><div class="l_side"><img src="img/img_kishimoto.png" alt=""></div><div class="r_side"><p class="author">Masashi Kishimoto</p>Una nueva obra Kabuki de Naruto será interpretada en Minamiza en Kyoto. Por favor echadle un vistazo!</div></div></div>
 <!-- Chainsaw Man--><div class="comment_area"><h2><a href="#">Chainsaw Man<span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2><div class="detail_area"><div class="l_side"><img src="img/img_fujimoto.png" alt=""></div><div class="r_side"><p class="author">Tatsuki Fujimoto</p>Las sandías son cada vez más baratas conforme se acerca el verano. Bien!</div></div></div>
 <!-- ACT-AGE--><div class="comment_area"><h2><a href="#">ACT-AGE<span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2><div class="detail_area"><div class="l_side"><img src="img/img_usazaki.png" alt=""></div><div class="r_side"><p class="author">Shiro Usazaki</p>Sin importar cuando salga de casa, siempre lo paso mal eligiendo que vestir según la temperatura. No entiendo las estaciones.</div></div></div>
 <!-- Black Clover--><div class="comment_area"><h2><a href="#">Black Clover<span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2><div class="detail_area"><div class="l_side"><img src="img/img_tabata.png" alt=""></div><div class="r_side"><p class="author">Y&umacr;ki Tabata</p>Enhorabuena a Shokugeki no Sōma por este gran recorrido!  Era un rival al que estaba siempre persiguiendo. Estaré aguardando su regreso!</div></div></div>
