--- a/TOC/19_29/esp.html
+++ b/TOC/19_29/esp.html
@@ -14,7 +14,7 @@
    type="image/x-icon"
         href="https://manganimy.github.io/TOC/img/fav.ico">
 <meta charset="UTF-8">
-<title>Puestos y comentarios del autor</title>
+<title>tabla de contenidos</title>
 <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
 <meta property="og:title" content="Weekly Shonen Jump #29 2019">	
 <meta property="og:description" content="Puestos y comentarios del autor">
@@ -30,7 +30,7 @@
 <div id="container">
 	<div class="header">
 		<h1><img src="img/top_esp.jpg" alt=""></h1>
-		<div class="txt_read"><span>Los puestos y comentarios del autor de la Weekly Shonen Jump de esta semana.</span></div>
+		<div class="txt_read"><span>Los puestos y comentarios de los autores de la Weekly Shonen Jump de esta semana.</span></div>
 		<div class="img_wj"><img src="img/img_wj.jpg" alt=""></div>
 	</div><!-- end .header -->
 
