--- a/TOC/esp.html
+++ b/TOC/esp.html
@@ -71,8 +71,8 @@ h2 a:active {
 <img src="img/logo.svg" style="width:70%" class="center">
 <h1>Weekly Shonen Jump Table of Contents & Author Comments</h1>
    
-<h2><a href="19_29/" style="display:block; width:100%">Weekly Shonen Jump #29 2019<img src="img/next2.png" style="padding:.02em; width:.35em; height:.7em"></a></h2>
-<a href="19_29/">
+<h2><a href="19_29/esp.html" style="display:block; width:100%">Weekly Shonen Jump #29 2019<img src="img/next2.png" style="padding:.02em; width:.35em; height:.7em"></a></h2>
+<a href="19_29/esp.html">
   <img src="img/19_29.jpg">
 </a> 	  
   </div>	
