--- a/TOC/esp.html
+++ b/TOC/esp.html
@@ -15,9 +15,9 @@
 <title>Weekly Shonen Jump TOC Hub</title>
 <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
 <meta property="og:title" content="Weekly Shonen Jump TOC Hub">
-<meta property="og:description" content="Archive of Weekly Shonen Jump Author Comments (with proper formatting)">
+<meta property="og:description" content="Archive of Weekly Shonen Jump Author Comments">
 <meta property="og:image" content="https://manganimy.github.io/TOC/img/meta.jpg">
-<meta property="og:url" content="https://manganimy.github.io/TOC/">
+<meta property="og:url" content="https://manganimy.github.io/TOC/esp.html">
 <meta name="twitter:card" content="summary_large_image">	
 <style>
  body {
@@ -69,7 +69,7 @@ h2 a:active {
 <body>
   <div class="content">
 <img src="img/logo.svg" style="width:70%" class="center">
-<h1>Weekly Shonen Jump Table of Contents & Author Comments</h1>
+<h1>Tabla de contenidos y comentarios de los autores de la Weekly Shonen Jump</h1>
    
 <h2><a href="19_29/esp.html" style="display:block; width:100%">Weekly Shonen Jump #29 2019<img src="img/next2.png" style="padding:.02em; width:.35em; height:.7em"></a></h2>
 <a href="19_29/esp.html">
