--- a/TOC/esp.html
+++ b/TOC/esp.html
@@ -74,6 +74,9 @@ h2 a:active {
 <h2><a href="19_29/esp.html" style="display:block; width:100%">Weekly Shonen Jump #29 2019<img src="img/next2.png" style="padding:.02em; width:.35em; height:.7em"></a></h2>
 <a href="19_29/esp.html">
   <img src="img/19_29.jpg">
-</a> 	  
+</a> 
+
+<div class="center" style="text-align:center;">
+	<h3>Source: Manga Magazines Group</h3>	  
   </div>	
 </body>
