--- a/TOC/19_29/esp.html
+++ b/TOC/19_29/esp.html
@@ -58,7 +58,7 @@
 
 	</div><!-- end .contents -->
 	<div id="footer">
-		<div class="cooyactxt" style="font-weight: 300">TL: <a href="https://twitter.com/MarcosMT0">Marcos</a></div>
+		<div class="cooyactxt" style="font-weight: 300">traducción: <a href="https://twitter.com/MarcosMT0">Marcos</a></div>
 		<div class="cooyactxt">&copy; SHUEISHA Inc. All rights reserved.</div>
 	</div><!-- end .footer -->
 </div><!-- end .container -->
