--- a/TOC/esp.html
+++ b/TOC/esp.html
@@ -15,7 +15,7 @@
 <title>Weekly Shonen Jump TOC Hub</title>
 <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
 <meta property="og:title" content="Weekly Shonen Jump TOC Hub">
-<meta property="og:description" content="Archive of Weekly Shonen Jump Author Comments">
+<meta property="og:description" content="Archivo de los comentarios de los autores de la Weekly Shonen Jump">
 <meta property="og:image" content="https://manganimy.github.io/TOC/img/meta.jpg">
 <meta property="og:url" content="https://manganimy.github.io/TOC/esp.html">
 <meta name="twitter:card" content="summary_large_image">	
