--- a/wsc/TOC/index.html
+++ b/wsc/TOC/index.html
@@ -124,6 +124,13 @@ div.desc {
 	    <div class="desc"><h2>Weekly Shonen Champion #28 2019</h2></div></a>
   </div>
 </div>
+<div class="responsive">
+  <div class="gallery">
+    <a href="19_29/">
+      <img src="19_29/img/img_wc.jpg" alt="" width="600" height="400">
+	    <div class="desc"><h2>Weekly Shonen Champion #29 2019</h2></div></a>
+  </div>
+</div>
 
 <div class="clearfix"></div>
 	<img src="img/mascot.png" style="width:48px; margin-top:10px;" class="center">
