--- a/wss/TOC/19_29/esp.html
+++ b/wss/TOC/19_29/esp.html
@@ -19,7 +19,7 @@
 <meta property="og:title" content="Weekly Shonen Sunday #29 2019">	
 <meta property="og:description" content="Puestos y comentarios del autor">
 <meta name="Keywords" content="Table of contents">
-<meta property="og:image" content="https://manganimy.github.io/wss/TOC/19_29/img/top_esp.jpg">
+<meta property="og:image" content="https://manganimy.github.io/wss/TOC/19_29/img/top.jpg">
 <meta property="og:url" content="https://manganimy.github.io//wssTOC/19_29/esp">
 <meta name="twitter:card" content="summary_large_image">
 <link rel="stylesheet" href="css/reset.css">
@@ -29,7 +29,7 @@
 <body>
 <div id="container">
 	<div class="header">
-		<h1><img src="img/top_esp.jpg" alt=""></h1>
+		<h1><img src="img/top.jpg" alt=""></h1>
 		<div class="txt_read"><span>This week's Weekly Shonen Sunday posting order &amp; comments from the author.</span></div>
 		<div class="img_wj" style="border: 1px solid #414141;"><img src="img/img_ss.jpg" alt="WSS issue 28"></div>
 	
