--- a/wss/TOC/19_29/esp.html
+++ b/wss/TOC/19_29/esp.html
@@ -30,7 +30,7 @@
 <div id="container">
 	<div class="header">
 		<h1><img src="img/top.jpg" alt=""></h1>
-		<div class="txt_read"><span>This week's Weekly Shonen Sunday posting order &amp; comments from the author.</span></div>
+		<div class="txt_read"><span>Los puestos y comentarios de los autores de la Weekly Shonen Sunday de esta semana.</span></div>
 		<div class="img_wj" style="border: 1px solid #414141;"><img src="img/img_ss.jpg" alt="WSS issue 28"></div>
 	
 	</div><!-- end .header -->	
