--- a/wss/TOC/esp.html
+++ b/wss/TOC/esp.html
@@ -15,7 +15,7 @@
 <title>Weekly Shonen Sunday TOC Hub</title>
 <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
 <meta property="og:title" content="Weekly Shonen Sunday TOC Hub">
-<meta property="og:description" content=""Archivo de los comentarios de los autores de la Weekly Shonen Sunday">
+<meta property="og:description" content="Archivo de los comentarios de los autores de la Weekly Shonen Sunday">
 <meta property="og:image" content="https://manganimy.github.io/wss/TOC/img/top.png">
 <meta property="og:url" content="https://manganimy.github.io/wss/TOC/esp">
 <meta name="twitter:card" content="summary_large_image">	
