--- a/TOC/esp.html
+++ b/TOC/esp.html
@@ -75,7 +75,11 @@ h2 a:active {
 <a href="19_29/esp.html">
   <img src="img/19_29.jpg">
 </a> 
-
+	  
+<h2><a href="19_30/esp.html" style="display:block; width:100%">Weekly Shonen Jump #29 2019<img src="img/next2.png" style="padding:.02em; width:.35em; height:.7em"></a></h2>
+<a href="19_30/esp.html">
+  <img src="img/19_30.jpg">
+</a> 
 <div class="center" style="text-align:center;">
 	<h3>Source: Manga Magazines Group</h3>	  
   </div>	
