--- a/TOC/index.html
+++ b/TOC/index.html
@@ -146,6 +146,11 @@ h2 a:active {
 <h2><a href="19_29/" style="display:block; width:100%">Weekly Shonen Jump #29 2019<img src="img/next2.png" style="padding:.02em; width:.35em; height:.7em"></a></h2>
 <a href="19_29/">
   <img src="img/19_29.jpg">
+</a> 	
+<h2><a href="19_30/" style="display:block; width:100%">Weekly Shonen Jump #29 2019<img src="img/next2.png" style="padding:.02em; width:.35em; height:.7em"></a></h2>
+<a href="19_30/">
+  <img src="img/19_30.jpg">
 </a> 	  
+	  
   </div>	
 </body>
