--- a/wss/TOC/19_29/esp.html
+++ b/wss/TOC/19_29/esp.html
@@ -78,7 +78,7 @@
 	</div><!-- end .contents -->
 	<div id="footer">
 		<div class="cooyactxt">Original Concept: <a href="https://mangaplus.shueisha.co.jp/">MANGA Plus</a></div>
-		<div class="cooyactxt" style="font-weight: 300">traducción: <a href="https://twitter.com/MarcosMT0">Marcos</a></div>
+		<div class="cooyactxt">traducción: <a href="https://twitter.com/MarcosMT0">Marcos</a></div>
 		<div class="cooyactxt">Translation: WSStalkback <a href="https://twitter.com/Wsstalkback">twitter</a>|<a href="https://wsstalkback.blogspot.com/">blog</a></div>
 		<div class="cooyactxt">&copy; SHOGAKUKAN Inc. All rights reserved.</div>
 	
