--- a/wss/TOC/19_29/index.html
+++ b/wss/TOC/19_29/index.html
@@ -20,7 +20,7 @@
 <meta property="og:description" content="Table of contents &amp; Author Comments">
 <meta name="Keywords" content="Table of contents">
 <meta property="og:image" content="https://manganimy.github.io/wss/TOC/19_29/img/top.jpg">
-<meta property="og:url" content="https://manganimy.github.io//wssTOC/19_29">
+<meta property="og:url" content="https://manganimy.github.io/wss/TOC/19_29">
 <meta name="twitter:card" content="summary_large_image">
 <link rel="stylesheet" href="css/reset.css">
 <link rel="stylesheet" href="css/style.css">
