--- a/wsc/TOC/19_28/index.html
+++ b/wsc/TOC/19_28/index.html
@@ -20,7 +20,7 @@
 <meta property="og:description" content="Table of contents &amp; Author Comments">
 <meta name="Keywords" content="Table of contents">
 <meta property="og:image" content="https://manganimy.github.io/wsc/TOC/19_28/img/top.jpg">
-<meta property="og:url" content="https://manganimy.github.io//wss/TOC/19_28">
+<meta property="og:url" content="https://manganimy.github.io/wsc/TOC/19_28">
 <meta name="twitter:card" content="summary_large_image">
 <link rel="stylesheet" href="css/reset.css">
 <link rel="stylesheet" href="css/style.css">
