--- a/wsc/TOC/esp.html
+++ b/wsc/TOC/esp.html
@@ -15,7 +15,7 @@
 <title>Weekly Shonen Champion TOC Hub</title>
 <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
 <meta property="og:title" content="Weekly Shonen Champion TOC Hub">
-<meta property="og:description" content="Archive of Weekly Shonen Champion Author Comments">
+<meta property="og:description" content="Archivo de los comentarios de los autores de la Weekly Shonen Champion">
 <meta property="og:image" content="https://manganimy.github.io/wsc/TOC/img/top.jpg">
 <meta property="og:url" content="https://manganimy.github.io/wsc/TOC/">
 <meta name="twitter:card" content="summary_large_image">	
@@ -114,19 +114,12 @@ div.desc {
 <body>
 <div class="content">
 <img src="img/logo.png" style="width:70%" class="center">
-<h1>Weekly Shonen Champion Table of Contents &amp; Author Comments</h1>
+<h1>Tabla de contenidos y comentarios de los autores de la Weekly Shonen Champion</h1>
 
 
 <div class="responsive">
   <div class="gallery">
-    <a href="19_28/">
-      <img src="19_28/img/img_wc.jpg" alt="" width="600" height="400">
-	    <div class="desc"><h2>Weekly Shonen Champion #28 2019</h2></div></a>
-  </div>
-</div>
-<div class="responsive">
-  <div class="gallery">
-    <a href="19_29/">
+    <a href="19_29/esp">
       <img src="19_29/img/img_wc.jpg" alt="" width="600" height="400">
 	    <div class="desc"><h2>Weekly Shonen Champion #29 2019</h2></div></a>
   </div>
