--- a/wsc/TOC/19_29/esp.html
+++ b/wsc/TOC/19_29/esp.html
@@ -61,7 +61,7 @@
 
 	</div><!-- end .contents -->
 	<div id="footer">
-		<div class="cooyactxt" style="font-weight: 300"><div class="cooyactxt">traducción: <a href="https://twitter.com/MarcosMT0">Marcos</a></div>TL: Google & <a href="https://twitter.com/RaafGL">@RaafGL</a></div>
+		<div class="cooyactxt">traducción: <a href="https://twitter.com/MarcosMT0">Marcos</a></div>
 		<div class="cooyactxt">Original Concept: <a href="https://mangaplus.shueisha.co.jp/">MANGA Plus</a></div>
 		<div class="cooyactxt">&copy; AKITA SHOTEN Co., Ltd. All rights reserved.</div>
 	
