--- a/wss/TOC/19_29/esp.html
+++ b/wss/TOC/19_29/esp.html
@@ -17,7 +17,7 @@
 <title>tabla de contenidos</title>
 <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
 <meta property="og:title" content="Weekly Shonen Sunday #29 2019">	
-<meta property="og:description" content="Puestos y comentarios del autor">
+<meta property="og:description" content="Tabla de contenidos y comentarios de los autores">
 <meta name="Keywords" content="Table of contents">
 <meta property="og:image" content="https://manganimy.github.io/wss/TOC/19_29/img/top.jpg">
 <meta property="og:url" content="https://manganimy.github.io/wss/TOC/19_29/esp">
