--- a/TOC/index.html
+++ b/TOC/index.html
@@ -19,7 +19,6 @@
 <meta property="og:image" content="https://manganimy.github.io/TOC/img/meta.jpg">
 <meta property="og:url" content="https://manganimy.github.io/TOC/">
 <meta name="twitter:card" content="summary_large_image">	
-<style>
  <style>
  body {
  margin:0;
@@ -153,9 +152,9 @@ h2 a:active {
     <div class="dropdown-content">
       <a href="/">Home</a>
       <a href="#">Weekly Shonen Jump Hub</a>
-      <a href=".../wss/TOC">Weekly Shonen Sunday Hub</a>
-      <a href=".../wsm/TOC">Weekly Shonen Magazine Hub</a>
-      <a href=".../wsc/TOC">Weekly Shonen Champion Hub</a>
+      <a href="/wss/TOC">Weekly Shonen Sunday Hub</a>
+      <a href="/wsm/TOC">Weekly Shonen Magazine Hub</a>
+      <a href="/wsc/TOC">Weekly Shonen Champion Hub</a>
     </div>
   </div> 
   <div class="lang">
