--- a/wss/TOC/index.html
+++ b/wss/TOC/index.html
@@ -19,7 +19,7 @@
 <meta property="og:image" content="https://manganimy.github.io/wss/TOC/img/top.png">
 <meta property="og:url" content="https://manganimy.github.io/wss/TOC/">
 <meta name="twitter:card" content="summary_large_image">	
-<link rel="stylesheet" type="text/css" href="wsjhub.css">
+<link rel="stylesheet" type="text/css" href="wsshub.css">
 </head>
 <body>
 <div class="navbar">
