--- a/TOC/esp.html
+++ b/TOC/esp.html
@@ -31,9 +31,9 @@
     <div class="dropdown-content">
       <a href="/">Home</a>
       <a href="#">Weekly Shonen Jump Hub</a>
-      <a href="/wss/TOC">Weekly Shonen Sunday Hub</a>
-      <a href="/wsm/TOC">Weekly Shonen Magazine Hub</a>
-      <a href="/wsc/TOC">Weekly Shonen Champion Hub</a>
+      <a href="/wss/TOC/esp">Weekly Shonen Sunday Hub</a>
+      <a href="/wsm/TOC/esp">Weekly Shonen Magazine Hub</a>
+      <a href="/wsc/TOC/esp">Weekly Shonen Champion Hub</a>
     </div>
   </div> 
   <div class="lang">
