--- a/wsm/TOC/esp.html
+++ b/wsm/TOC/esp.html
@@ -15,9 +15,9 @@
 <title>Weekly Shonen Magazine TOC Hub</title>
 <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
 <meta property="og:title" content="Weekly Shonen Magazine TOC Hub">
-<meta property="og:description" content="Archive of Weekly Shonen Magazine Author Comments">
+<meta property="og:description" content="Archivo de los comentarios de los autores de la Weekly Shonen Magazine">
 <meta property="og:image" content="https://manganimy.github.io/wsm/TOC/img/top.jpg">
-<meta property="og:url" content="https://manganimy.github.io/wsm/TOC/">
+<meta property="og:url" content="https://manganimy.github.io/wsm/TOC/esp">
 <meta name="twitter:card" content="summary_large_image">	
 <style>
  body {
@@ -112,19 +112,11 @@ div.desc {
 <body>
 <div class="content">
 <img src="img/logo.png" style="width:70%" class="center">
-<h1>Weekly Shonen Magazine Table of Contents &amp; Author Comments</h1>
-
+<h1>Tabla de contenidos y comentarios de los autores de la Weekly Shonen Magazine</h1>
 
 <div class="responsive">
   <div class="gallery">
-    <a href="19_28/">
-      <img src="19_28/img/img_wm.jpg" alt="" width="600" height="400">
-	    <div class="desc"><h2>Weekly Shonen Magazine #28 2019</h2></div></a>
-  </div>
-</div>
-<div class="responsive">
-  <div class="gallery">
-    <a href="19_29/">
+    <a href="#">
       <img src="19_29/img/img_wm.jpg" alt="" width="600" height="400">
 	    <div class="desc"><h2>Weekly Shonen Magazine #29 2019</h2></div></a>
   </div>
@@ -133,8 +125,7 @@ div.desc {
 <div class="clearfix"></div>
 	
 <div class="center" style="text-align:center; line-height:1; font-size:.85em">
-	<p><b>Source: WSJ Discord</b><p>
-	<p><b>TL: Google & <a href="https://twitter.com/RaafGL">@RaafGL</a></b></p>
+	<p><b>Source: Manga Magazines Group</b><p>
 	<p><b>Want to help? contact:<a href="https://twitter.com/WSM_manga">WSM_manga</a></b></p>
 
 </div>	
