--- a/wss/TOC/index.html
+++ b/wss/TOC/index.html
@@ -84,7 +84,7 @@
 <div class="clearfix"></div>
 	<img src="img/mascot.png" style="width:48px; margin-top:10px;" class="center">
 	<p style="border-top: 1px solid red"> </p>
-<div class="center" style="text-align:center; line-height:0">
+<div class="center" style="text-align:center;">
 	<h3>In collaboration with: WSStalkback</h3> 
 	<p><a href="https://twitter.com/Wsstalkback"><img src="img/twt.png" style="border-right: 1px solid black; padding-right:3px;"></a><a href="https://wsstalkback.blogspot.com/"><img src="img/blog.png" style="border-left: 1px solid black; padding-left:3px;"></a></p>
 </div>	
