--- a/wsc/TOC/index.html
+++ b/wsc/TOC/index.html
@@ -19,99 +19,36 @@
 <meta property="og:image" content="https://manganimy.github.io/wsc/TOC/img/top.jpg">
 <meta property="og:url" content="https://manganimy.github.io/wsc/TOC/">
 <meta name="twitter:card" content="summary_large_image">	
-<style>
- body {
-  background: #f0ffff;
-  color: black;
-  font-family: Futura,Trebuchet MS,sans-serif,Arial;
- }
-  .center {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 50%;
-  }
- .content {
-  max-width: 1080px;
-  margin: auto;
-} 
- h1 {
-  font-size: 1.5em;
-  border-bottom: 3px solid #9c46ff;
-}
- h2 {
- font-size: 1em;
-}
-div.gallery  a {
-     text-decoration: none;
-}
-div.gallery  a {
-	color: black;
-}
-div.gallery  a:link {
-	color: black;
-}
-div.gallery  a:visited {
-	color: black;
-}
-div.gallery  a:hover {
-	color: #9c46ff;
-}
-div.gallery  a:active {
-	color: black;
-}
-h3 {
-	font-size:0.85em;
-}
-div.gallery {
-  border: 1px solid #ccc;
-}
-
-div.gallery:hover {
-  border: 1px solid #777;
-}
-
-div.gallery img {
-  width: 100%;
-  height: auto;
-}
-
-div.desc {
-  padding: 10px;
-  text-align: center;
-}
-
-* {
-  box-sizing: border-box;
-}
-
-.responsive {
-  padding: 0 6px;
-  float: left;
-  width: 24.99999%;
-}
-
-@media only screen and (max-width: 700px) {
-  .responsive {
-    width: 49.99999%;
-    margin: 6px 0;
-  }
-}
-
-@media only screen and (max-width: 500px) {
-  .responsive {
-    width: 49.99999%;
-  }
-}
-
-.clearfix:after {
-  content: "";
-  display: table;
-  clear: both;
-}
-</style>
+<link rel="stylesheet" type="text/css" href="wsshub.css">
 </head>
 <body>
+<div class="navbar">
+<div class="fit">
+  <div class="dropdown">
+    <button class="dropbtn">Menu 
+      <i class="fa fa-caret-down"></i>
+    </button>
+    <div class="dropdown-content">
+      <a href="/">Home</a>
+      <a href="/TOC">Weekly Shonen Jump Hub</a>
+      <a href="/wss/TOC">Weekly Shonen Sunday Hub</a>
+      <a href="/wsm/TOC">Weekly Shonen Magazine Hub</a>
+      <a href="#">Weekly Shonen Champion Hub</a>
+    </div>
+  </div> 
+  <div class="lang">
+  <div class="dropdown">
+    <button class="dropbtn">eng 
+      <i class="fa fa-caret-down"></i>
+    </button>
+    <div class="dropdown-content">
+      <a href="esp">esp</a>
+    </div>
+    </div>
+  </div> 
+</div>
+</div>	<!-- end navbar -->
+<div style="margin: 0 8px">	
 <div class="content">
 <img src="img/logo.png" style="width:70%" class="center">
 <h1>Weekly Shonen Champion Table of Contents &amp; Author Comments</h1>
@@ -139,6 +76,7 @@ div.desc {
 	<h3>Source: Manga Magazines Group</h3> 
 
 </div>	
-</div>
-
+	  
+  </div><!-- end content -->	
+</div> <!-- end margin -->
 </body>
