--- a/wsc/TOC/index.html
+++ b/wsc/TOC/index.html
@@ -19,7 +19,7 @@
 <meta property="og:image" content="https://manganimy.github.io/wsc/TOC/img/top.jpg">
 <meta property="og:url" content="https://manganimy.github.io/wsc/TOC/">
 <meta name="twitter:card" content="summary_large_image">	
-<link rel="stylesheet" type="text/css" href="wsshub.css">
+<link rel="stylesheet" type="text/css" href="wschub.css">
 </head>
 <body>
 <div class="navbar">
