--- a/wsm/TOC/index.html
+++ b/wsm/TOC/index.html
@@ -48,6 +48,7 @@
   </div> 
 </div>
 </div>	<!-- end navbar -->
+	<div style="margin: 0 8px">
 <div class="content">
 <img src="img/logo.png" style="width:70%" class="center">
 <h1>Weekly Shonen Magazine Table of Contents &amp; Author Comments</h1>
