--- a/wsm/TOC/esp.html
+++ b/wsm/TOC/esp.html
@@ -19,97 +19,36 @@
 <meta property="og:image" content="https://manganimy.github.io/wsm/TOC/img/top.jpg">
 <meta property="og:url" content="https://manganimy.github.io/wsm/TOC/esp">
 <meta name="twitter:card" content="summary_large_image">	
-<style>
- body {
-  background-color: #ffdddd;
-  background-image: linear-gradient(#ffdddd, #f6626b);	 
-  color: black;
-  font-family: Futura,Trebuchet MS,sans-serif,Arial;
- }
-  .center {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 50%;
-  }
- .content {
-  max-width: 1080px;
-  margin: auto;
-} 
- h1 {
-  font-size: 1.5em;
-  border-bottom: 3px solid #00479d;
-}
- h2 {
- font-size: 1em;
-}
-a {
-     text-decoration: none;
-}
-div.gallery a {
-	color: black;
-}
-div.gallery a:link {
-	color: black;
-}
-div.gallery a:visited {
-	color: black;
-}
-div.gallery a:hover {
-	color: #00479d;
-}
-div.gallery a:active {
-	color: black;
-}
-div.gallery {
-  border: 1px solid #777;
-}
-
-div.gallery:hover {
-  border: 1px solid #00479d;
-}
-
-div.gallery img {
-  width: 100%;
-  height: auto;
-}
-
-div.desc {
-  padding: 10px;
-  text-align: center;
-}
-
-* {
-  box-sizing: border-box;
-}
-
-.responsive {
-  padding: 0 6px;
-  float: left;
-  width: 24.99999%;
-}
-
-@media only screen and (max-width: 700px) {
-  .responsive {
-    width: 49.99999%;
-    margin: 6px 0;
-  }
-}
-
-@media only screen and (max-width: 500px) {
-  .responsive {
-    width: 49.99999%;;
-  }
-}
-
-.clearfix:after {
-  content: "";
-  display: table;
-  clear: both;
-}
-</style>
+<link rel="stylesheet" type="text/css" href="wsmhub.css">
 </head>
 <body>
+<div class="navbar">
+<div class="fit">
+  <div class="dropdown">
+    <button class="dropbtn">Menu 
+      <i class="fa fa-caret-down"></i>
+    </button>
+    <div class="dropdown-content">
+      <a href="/">Home</a>
+      <a href="/TOC/esp">Weekly Shonen Jump Hub</a>
+      <a href="/wsc/TOC/esp">Weekly Shonen Sunday Hub</a>
+      <a href="#">Weekly Shonen Magazine Hub</a>
+      <a href="/wsc/TOC/esp">Weekly Shonen Champion Hub</a>
+    </div>
+  </div> 
+  <div class="lang">
+  <div class="dropdown">
+    <button class="dropbtn">esp 
+      <i class="fa fa-caret-down"></i>
+    </button>
+    <div class="dropdown-content">
+      <a href="index">eng</a>
+    </div>
+    </div>
+  </div> 
+</div>
+</div>	<!-- end navbar -->
+	<div style="margin: 0 8px">
 <div class="content">
 <img src="img/logo.png" style="width:70%" class="center">
 <h1>Tabla de contenidos y comentarios de los autores de la Weekly Shonen Magazine</h1>
@@ -129,5 +68,6 @@ div.desc {
 	<p><b>Want to help? contact:<a href="https://twitter.com/WSM_manga">WSM_manga</a></b></p>
 
 </div>	
-</div>
+ </div><!-- end content -->	
+</div> <!-- end margin -->
 </body>
