--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 <meta name="twitter:card" content="summary_large_image">	
  <style>
 body {
+	margin: 0;
 	background: #d9d9d9;
 }
 h1 {
@@ -34,11 +35,84 @@ h1 {
   margin-left: auto;
   margin-right: auto;
   width: 50%;
+  }.navbar {
+  overflow: hidden;
+  background-color: #333;
+  position: fixed; /* Set the navbar to fixed position */
+  top: 0; /* Position the navbar at the top of the page */
+  width: 100%; /* Full width */
+}
+
+.navbar a {
+  float: left;
+  font-size: 16px;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+.navbar .lang {
+  float: right;
+  margin-right: 15px;
+
+}
+.navbar .fit{
+  max-width: 1000px;
+  margin-left: auto;
+  margin-right: auto;
   }
+.dropdown {
+  float: left;
+  overflow: hidden;
+}
+
+.dropdown .dropbtn {
+  font-size: 16px;  
+  border: none;
+  outline: none;
+  color: white;
+  padding: 14px 16px;
+  background-color: inherit;
+  font-family: inherit;
+  margin: 0;
+}
+
+.navbar a:hover, .dropdown:hover .dropbtn {
+  background-color: yellow;
+  color: black;
+}
+
+.dropdown-content {
+  display: none;
+  position: fixed;
+  background-color: #f9f9f9;
+  min-width: 50px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  float: none;
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+}
+
+.dropdown-content a:hover {
+  background-color: #ddd;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}	
  .content {
   max-width: 1080px;
-  margin: auto;
-} 
+  margin-top:60px;
+  margin-left: auto;
+  margin-right: auto;
+  }
 div.gallery  a {
      text-decoration: none;
 }
@@ -100,6 +174,33 @@ div.desc {
   </style>
 </head>
 <body>
+<div class="navbar">
+<div class="fit">
+  <div class="dropdown">
+    <button class="dropbtn">Menu 
+      <i class="fa fa-caret-down"></i>
+    </button>
+    <div class="dropdown-content">
+      <a href="#">Home</a>
+      <a href="#">Shonen Jump Hub</a>
+      <a href="#">Shonen Sunday</a>
+      <a href="#">Magazine</a>
+      <a href="#">Champ</a>
+    </div>
+  </div> 
+  <div class="lang">
+  <div class="dropdown">
+    <button class="dropbtn">eng 
+      <i class="fa fa-caret-down"></i>
+    </button>
+    <div class="dropdown-content">
+      <a href="#">esp</a>
+    </div>
+    </div>
+  </div> 
+</div>
+</div>	
+	<div style="margin: 0 8px">	
 <div class="content">  
 <h1>Home</h1>
 
@@ -140,6 +241,7 @@ div.desc {
   </div>
 </div>
 <div class="clearfix"></div>
-    </div>
+	  
+  </div><!-- end content -->	
+</div> <!-- end margin -->
 </body>
-  
