--- a/index.html
+++ b/index.html
@@ -181,21 +181,11 @@ div.desc {
       <i class="fa fa-caret-down"></i>
     </button>
     <div class="dropdown-content">
-      <a href="#">Home</a>
-      <a href="#">Shonen Jump Hub</a>
-      <a href="#">Shonen Sunday</a>
-      <a href="#">Magazine</a>
-      <a href="#">Champ</a>
-    </div>
-  </div> 
-  <div class="lang">
-  <div class="dropdown">
-    <button class="dropbtn">eng 
-      <i class="fa fa-caret-down"></i>
-    </button>
-    <div class="dropdown-content">
-      <a href="#">esp</a>
-    </div>
+      <a href="/">Home</a>
+      <a href="TOC">Shonen Jump Hub</a>
+      <a href="wss/TOC">Shonen Sunday</a>
+      <a href="wsm/TOC">Magazine</a>
+      <a href="wsc/TOC">Champ</a>
     </div>
   </div> 
 </div>
