--- a/index.html
+++ b/index.html
@@ -182,10 +182,10 @@ div.desc {
     </button>
     <div class="dropdown-content">
       <a href="/">Home</a>
-      <a href="TOC">Shonen Jump Hub</a>
-      <a href="wss/TOC">Shonen Sunday</a>
-      <a href="wsm/TOC">Magazine</a>
-      <a href="wsc/TOC">Champ</a>
+      <a href="TOC">Weekly Shonen Jump Hub</a>
+      <a href="wss/TOC">Weekly Shonen Sunday Hub</a>
+      <a href="wsm/TOC">Weekly Shonen Magazine Hub</a>
+      <a href="wsc/TOC">Weekly Shonen Champion Hub</a>
     </div>
   </div> 
 </div>
