--- a/TOC/19_30/index.html
+++ b/TOC/19_30/index.html
@@ -213,7 +213,18 @@
 				</div>
 			</div>
 		</div>
-		
+		<!-- Yuuna -->
+		<div class="comment_area">
+			<h2><a href="#">Yuragi-sou no Yuuna-san<span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
+			<div class="detail_area">
+				<div class="l_side"><img src="img/img_miura.png" alt=""></div>
+				<div class="r_side">
+					<p class="author">Tadahiro Miura</p>
+					Even if I was fired and had to work at a campsite where I could earn enough money to live, I'd be bombarded with a lot of work. I would need to be strong.
+
+				</div>
+			</div>
+		</div>
 		<!-- The Last Saiyuki -->
 		<div class="comment_area">
 			<h2><a href="https://mangaplus.shueisha.co.jp/#/titles/100054">The Last Saiyuki <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
