--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ h1 {
 }
 
 .navbar a:hover, .dropdown:hover .dropbtn {
-  background-color: yellow;
+  background-color: #d9d9d9;
   color: black;
 }
 
