--- a/wsm/TOC/index.html
+++ b/wsm/TOC/index.html
@@ -31,7 +31,7 @@
     <div class="dropdown-content">
       <a href="/">Home</a>
       <a href="/TOC">Weekly Shonen Jump Hub</a>
-      <a href="/wsc/TOC">Weekly Shonen Sunday Hub</a>
+      <a href="/wss/TOC">Weekly Shonen Sunday Hub</a>
       <a href="#">Weekly Shonen Magazine Hub</a>
       <a href="/wsc/TOC">Weekly Shonen Champion Hub</a>
     </div>
