--- a/TOC/index.html
+++ b/TOC/index.html
@@ -49,10 +49,12 @@
 </div>
 </div>	<!-- end navbar -->
 <div style="margin: 0 8px">	
-  <div class="content">
+  <div class="header">
 <img src="img/logo.svg" style="width:70%" class="center">
 <h1>Weekly Shonen Jump Table of Contents & Author Comments</h1>
-   
+	</div>
+	  <div class="content">
+  
 <h2><a href="19_10/" style="display:block; width:100%">Weekly Shonen Jump #10 2019<img src="img/next2.png" style="padding:.02em; width:.35em; height:.7em"></a></h2>
 <a href="19_10/">
   <img src="img/19_10.jpg">
