--- a/TOC/esp.html
+++ b/TOC/esp.html
@@ -49,10 +49,11 @@
 </div>
 </div>	<!-- end navbar -->
 <div style="margin: 0 8px">	
-  <div class="content">
+  <div class="header">
 <img src="img/logo.svg" style="width:70%" class="center">
 <h1>Tabla de contenidos y comentarios de los autores de la Weekly Shonen Jump</h1>
-   
+	</div>
+	  <div class="content">
 <h2><a href="19_29/esp.html" style="display:block; width:100%">Weekly Shonen Jump #29 2019<img src="img/next2.png" style="padding:.02em; width:.35em; height:.7em"></a></h2>
 <a href="19_29/esp.html">
   <img src="img/19_29.jpg">
